<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="184dp"
        android:layout_height="184dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/viruj_icon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="294dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/poppinsbold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="15dp"
        android:textColor="#FC0101"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_gradient"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/red_line"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/red_line"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/or_login_with"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="164dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="30dp"
        android:textColor="#FC0101"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/google"
        tools:layout_editor_absoluteX="30dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/mac"
        tools:layout_editor_absoluteX="130dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/fb"
        tools:layout_editor_absoluteX="232dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/twitter"
        tools:layout_editor_absoluteX="332dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>