<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brief_page_background">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#2196F3"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/trail_icon"
            android:paddingEnd="10dp"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap,RtlSymmetry,UseCompatTextViewDrawableXml" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_marginBottom="15dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/img_profile" />

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/profileImage"
        android:layout_marginStart="-45dp"
        android:layout_marginTop="106dp"
        android:layout_toEndOf="@id/profileImage"
        android:contentDescription="@string/qr"
        android:src="@drawable/qr_code" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_margin="12dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/line"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/UserDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@id/imageView8"
        android:layout_centerHorizontal="true"
        android:text="Age :    Blood Group : " />

    <TextView
        android:id="@+id/vitals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/UserDetails"
        android:layout_centerHorizontal="true"
        android:text="Blood Pressure   Heart Rate "
        android:layout_marginTop="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserDetails"
        android:layout_marginTop="76dp"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/medicalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/lifeStyleLayout"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/medical_state"
                    android:background="null"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/blue_box"
                    android:clickable="false"
                    android:focusable="false" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/medical_icon"
                    android:onClick="onMedicalClick"
                    android:src="@drawable/stetoscope" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/medical_state"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lifeStyleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/drugLayout"
            app:layout_constraintStart_toEndOf="@+id/medicalLayout"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/medical_state"
                    android:background="null"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/blue_box"
                    android:clickable="false"
                    android:focusable="false" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/lifestyle_icon"
                    android:onClick="onLifeStyleClick"
                    android:src="@drawable/hand" />
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lifestyle"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drugLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lifeStyleLayout"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/medical_state"
                    android:background="null"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/blue_box"
                    android:clickable="false"
                    android:focusable="false" />
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:src="@drawable/medicine"
                    android:contentDescription="@string/drug_allergy_icon"
                    android:onClick="onDrugAllergyClick" />
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/drug_allergy"
                android:textSize="14sp">

            </TextView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constraintLayout"
        android:layout_marginTop="30dp"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/FoodAllergyLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="null"
                    android:clickable="false"
                    android:contentDescription="@string/blue_box"
                    android:focusable="false"
                    android:scaleType="fitCenter"
                    android:src="@drawable/medical_state" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/food_allergy_icon"
                    android:onClick="onFoodAllergyClick"
                    android:src="@drawable/clip" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/food_allergy"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/SettingsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/CoinsLayout"
            app:layout_constraintStart_toEndOf="@+id/FoodAllergyLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="null"
                android:contentDescription="@string/blue_box"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/settings"
                android:onClick="onSettingsClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/CoinsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/SettingsLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="null"
                android:contentDescription="@string/blue_box"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/v"
                android:onClick="onCoinsClick"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/coins"
                android:textSize="14sp">

            </TextView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>


